syntax = "proto3";

package rpc;

//
// RPC communication layer
//
message RpcRequest {
  string method = 1;
  bytes data = 2;
}

message RpcResponse {
  string method = 1;
  bytes data = 2;
  bool status = 3;
  string error = 4;
}

//
// RPC
//

message AckRequest {
  string message = 1;
}

message AckResponse {
  string message = 1;
}

service Service {
  rpc ack (AckRequest) returns (AckResponse);
}
